Element with `overflow: scroll` does not correctly account for margins of its child to determine the scrollable area with `writing-mode: vertical-rl` https://bugs.webkit.org/show_bug.cgi?id=287638 <rdar://problem/144793456>

Reviewed by Antti Koivisto.

Scrollable rect width/height are flipped in vertical mode.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-height-with-flex-item-margin-inline-end.html-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-height-with-flex-item-margin-inline-end.html.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-with-flex-item-margin-inline-end.html.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-with-flex-item-margin-inline-end.html:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::layoutOverflowRectForPropagation const):

Canonical link: https://commits.webkit.org/290518@main